--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
     <div class="container">
         <div class="forms-container">
           <div class="signin-signup">
-            <form action="#" class="sign-in-form">
-              <h2 class="title">Sign in</h2>
+            <form action="/student.html" class="sign-in-form" method="POST">             
+            <h2 class="title">Sign in</h2>
               <div class="input-field">
                 <i class="fas fa-user"></i>
                 <input type="text" placeholder="Username" />
@@ -20,7 +20,7 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" placeholder="Password" />
               </div>
-              <input type="submit" value="Login" class="btn1" />
+              <input type="submit"  value="Login" class="btn1" />
               <p class="social-text">Or Sign in with social platforms</p>
               <div class="social-media">
                 <a href="#" class="social-icon">
@@ -33,7 +33,7 @@
                 </a>
               </div>
             </form>
-            <form action="#" class="sign-up-form">
+            <form action="users/dashboard.html" class="sign-up-form" method="POST">
               <h2 class="title">Sign up</h2>
               <div class="input-field">
                 <i class="fas fa-user"></i>
@@ -48,6 +48,7 @@
                 <input type="password" placeholder="Password" />
               </div>
               <input type="submit" class="btn2" value="Sign up" />
+
               <p class="social-text">Or Sign up with social platforms</p>
               <div class="social-media">
                 <a href="#" class="social-icon2">
