--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
         <img src="/img/logo.png" width="50px">
       </div>
       <div class="right_area">
-        <a href="#" class="logout_btn">Logout</a>
+        <a href="/login" class="logout_btn">Logout</a>
       </div>
     </header>
     <!--header area end-->
